# test-task

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2025_11_25_2311-42e9b5ab51b4_first.py
src/app/api/: __init__.py  contract.py  dependencies.py  lead.py  operator.py  source.py
src/app/exceptions/: exceptions.py  operator_exception_handler.py
src/app/models/: __init__.py  contract.py  lead.py  operator.py  operator_source.py  source.py
src/app/repositories/: base_repository.py  repositories.py
src/app/repositories/mappers/: __init__.py  base_datamapper.py  mappers.py
src/app/schemas/: __init__.py  contract.py  lead.py  operator.py  operator_source.py  source.py
src/app/service/: base_service.py
src/app/service/bussines/: contract_service.py  lead_service.py  operator_service.py  source_service.py
src/core/: config.py
src/core/db/: __init__.py  base_model.py  config.py
src/repositories/: base_repository.py  repositories.py
src/repositories/mappers/: __init__.py  base_datamapper.py  mappers.py
